--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -727,13 +727,21 @@ ul li:hover, ul li a:hover{
         justify-content: center;
         position: absolute;
         top: 0;
-        left: -100%;
+        left: -100vw;
         z-index: 100;
+        overflow-y: hidden;
         transition: all 0.5s ease;
+    }
+    
+    .NavigationMobile li{
+        /* border: thin dotted #00f; */
+        margin-left: -10%;
+
     }
 
     .NavigationMobile.active{
         background-color: #fff;
+        overflow-y: hidden;
         left: 0;
     }
 
@@ -749,27 +757,63 @@ ul li:hover, ul li a:hover{
         /* border: 1px solid #ccc; */
         border-radius: 15px;
     }
-
+    
     .NavigationMobile .LinkMobile:hover{
         background-color: #00000040;
         color: #fff;
     }
-
+    
     .MenuNavMobile .IconMen:hover{
         cursor: pointer;
         color: #f00;
     }
-
+    
     .MenuNavMobile .IconMen:nth-child(2){
         display: none;
     }
-
+    
     .MenuNavMobile.active .IconMen:nth-child(2){
         display: block;
         z-index: 130;
     }
-
+    
     .MenuNavMobile.active .IconMen:nth-child(1){
         display: none;
+    }
+    
+    .LinkNavBarMobile{
+        width: 90px;
+        height: 40px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        float: left;
+        /* border: 1px solid #ccc; */
+    }
+
+    .LinkNavBarMobile a{
+        color: #000;
+        border-radius: 15px;
+        width: 80px;
+        height: 25px;
+        text-decoration: none;
+        transition: all 0.5s;
+    }
+
+    .LinkNavBarMobile a:hover{
+        background-color: #00000040;
+        color: #fff;
+        cursor: pointer;
+    }
+    
+    .AccordMarcas{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        font-weight: lighter;
+        /* border: 1px solid #ccc; */
     }
 }
