--- a/client/src/components/Product/Product.css
+++ b/client/src/components/Product/Product.css
@@ -146,7 +146,7 @@
         align-items: center;
         justify-content: space-evenly;
         color: #cccccc;
-        font-size: 0.7vw;
+        font-size: 0.9vw;
     }
 
     .IconShoppingContainer{
@@ -272,7 +272,7 @@
         align-items: center;
         justify-content: space-evenly;
         color: #cccccc;
-        font-size: 0.7vw;
+        font-size: 0.8vw;
     }
 
     .IconShoppingContainer{
@@ -304,36 +304,37 @@
 }
 
 @media (min-width: 992px) and (max-width: 1199px){
-    
+
     .ProductContainer{
-        width: 160px;
-        height: 250px;
+        width: 150px;
+        height: 220px;
         border-radius: 10px;
         display: flex;
         flex-direction: column;
         align-items: center;
         transition: 0.5s all;
+        /* border: thin dotted #f00; */
     }
 
     .Zapatilla{
         width: 100%;
         height: 180px;
         overflow: hidden;
-        border: thin dotted #0f0;
+        /* border: thin dotted #0f0; */
     }
     
     .Zapatilla img{
-        width: 130px;
+        width: 110px;
         position: relative;
         top: 15px;
         /* height: 210px; */
-        border: thin dotted #0f0;
+        /* border: thin dotted #0f0; */
     }
 
     .Name h3{ 
         width: 100%;
         height: 35px;
-        font-size: 1.1vw;
+        font-size: 1.3vw;
         font-family: 'Zen Kurenaido', sans-serif;
         line-height: 15px;
         color: #000;
@@ -343,7 +344,7 @@
     .PriceProduct{
         width: 95%;
         color: #000;
-        font-size: 1vw;
+        font-size: 1.3vw;
         display: flex;
         flex-direction: row;
         align-items: flex-start;
@@ -351,9 +352,13 @@
         /* border: thin dotted #f00; */
         margin-left: 10px;
     }
+
+    .PriceProduct h5{
+        font-size: 1.3vw;
+    }
     
     .OldPrice{
-        font-size: 1.5vw;
+        font-size: 1.3vw;
         margin: 0 10px;
         text-decoration:line-through;
         color: #f00;
@@ -361,12 +366,12 @@
 
     .Discount{
         width: 100%;
-        height: 50px;
+        height: 70px;
         position: absolute;
+        left: 70px;
         top: -15px;
-        left: 0;
         background-image: url('../../assets/discount.png');
-        background-size: 40%;
+        background-size: 30%;
         background-repeat: no-repeat;
         background-position: center center;
     }
@@ -375,9 +380,10 @@
         color: #fff;
         font-weight: bold;
         line-height: 40px;
-        font-size: 1.6vw;
+        font-size: 1.2vw;
+        letter-spacing: -1px;
         position: relative;
-        left: -8px;
+        top: 15px;
     }
     
     .Rate{
@@ -392,7 +398,429 @@
         align-items: center;
         justify-content: space-evenly;
         color: #cccccc;
-        font-size: 0.7vw;
+        font-size: 1vw;
+    }
+
+    .IconShoppingContainer{
+        width: 100%;
+        margin-top: 10px;
+        position: absolute;
+        top: 0;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        color:  rgb(197, 197, 197);
+        transition: 0.5s all;
+        z-index: 1;
+    }
+    
+    .IconShopping{
+        width: 22px;
+        height: 22px;
+        margin: 0 15px;
+        border-radius: 20px;
+        background-color: #00000010;
+        background: '-moz-linear-gradient(top, #9E0000 0%, #FF0000 100%)';
+        background: '-webkit-linear-gradient(top, #9E0000 0%, #FF0000 100%)';
+        background: 'linear-gradient(to top, #9E0000 0%, #FF0000 100%)';
+        /* border: thin dotted #f00; */
+    }
+}
+
+
+@media (min-width: 768px) and (max-width: 991px){
+
+    .ProductContainer:hover{
+        /* border-top: solid 1px #00000020;
+        border-left: solid 1px #00000020; */
+        cursor: pointer;
+        transform: translateY(-10px);
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2)
+    }
+    
+    .ProductContainer{
+        width: 140px;
+        height: 200px;
+        border-radius: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        transition: 0.5s all;
+        margin: 10px 0;
+        /* border: thin dotted #f00; */
+    }
+
+    .Zapatilla{
+        width: 100%;
+        height: 180px;
+        overflow: hidden;
+        /* border: thin dotted #0f0; */
+    }
+    
+    .Zapatilla img{
+        width: 110px;
+        position: relative;
+        top: 15px;
+        /* height: 210px; */
+        /* border: thin dotted #0f0; */
+    }
+
+    .Name h3{ 
+        width: 100%;
+        height: 35px;
+        font-size: 1.5vw;
+        font-family: 'Zen Kurenaido', sans-serif;
+        line-height: 15px;
+        color: #000;
+        /* border: thin dotted #f00; */
+    }
+    
+    .PriceProduct{
+        width: 95%;
+        color: #000;
+        font-size: 1.5vw;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-evenly;
+        /* border: thin dotted #f00; */
+        margin-left: 10px;
+    }
+
+    .PriceProduct h5{
+        font-size: 1.5vw;
+    }
+    
+    .OldPrice{
+        font-size: 1.5vw;
+        margin: 0 10px;
+        text-decoration:line-through;
+        color: #f00;
+    }
+
+    .Discount{
+        width: 100%;
+        height: 70px;
+        position: absolute;
+        left: 70px;
+        top: -15px;
+        background-image: url('../../assets/discount.png');
+        background-size: 30%;
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+    
+    .Discount h5{
+        color: #fff;
+        font-weight: bold;
+        line-height: 40px;
+        font-size: 1.2vw;
+        letter-spacing: -1px;
+        position: relative;
+        top: 15px;
+    }
+    
+    .Rate{
+        width: 100%;
+    }
+    
+    .NoRating{
+        width: 100%;
+        height: 30px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+        color: #cccccc;
+        font-size: 1.1vw;
+    }
+
+    .IconShoppingContainer{
+        width: 100%;
+        margin-top: 10px;
+        position: absolute;
+        top: 0;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        color:  rgb(197, 197, 197);
+        transition: 0.5s all;
+        z-index: 1;
+    }
+    
+    .IconShopping{
+        width: 22px;
+        height: 22px;
+        margin: 0 15px;
+        border-radius: 20px;
+        background-color: #00000010;
+        background: '-moz-linear-gradient(top, #9E0000 0%, #FF0000 100%)';
+        background: '-webkit-linear-gradient(top, #9E0000 0%, #FF0000 100%)';
+        background: 'linear-gradient(to top, #9E0000 0%, #FF0000 100%)';
+        /* border: thin dotted #f00; */
+    }
+}
+
+
+@media (min-width: 576px) and (max-width: 767px){
+
+    .ProductContainer:hover{
+        /* border-top: solid 1px #00000020;
+        border-left: solid 1px #00000020; */
+        cursor: pointer;
+        transform: translateY(-10px);
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2)
+    }
+    
+    .ProductContainer{
+        width: 130px;
+        height: 200px;
+        border-radius: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        transition: 0.5s all;
+        margin: 10px 0;
+        /* border: thin dotted #f00; */
+    }
+
+    .Zapatilla{
+        width: 100%;
+        height: 180px;
+        overflow: hidden;
+        /* border: thin dotted #0f0; */
+    }
+    
+    .Zapatilla img{
+        width: 110px;
+        position: relative;
+        top: 15px;
+        /* height: 210px; */
+        /* border: thin dotted #0f0; */
+    }
+
+    .Name h3{ 
+        width: 100%;
+        height: 35px;
+        font-size: 2vw;
+        font-family: 'Zen Kurenaido', sans-serif;
+        line-height: 15px;
+        color: #000;
+        /* border: thin dotted #f00; */
+    }
+    
+    .PriceProduct{
+        width: 95%;
+        color: #000;
+        font-size: 2vw;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-evenly;
+        /* border: thin dotted #f00; */
+        margin-left: 10px;
+    }
+
+    .PriceProduct h5{
+        font-size: 2vw;
+    }
+    
+    .OldPrice{
+        font-size: 2vw;
+        margin: 0 10px;
+        text-decoration:line-through;
+        color: #f00;
+    }
+
+    .Discount{
+        width: 100%;
+        height: 70px;
+        position: absolute;
+        left: 70px;
+        top: -15px;
+        background-image: url('../../assets/discount.png');
+        background-size: 30%;
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+    
+    .Discount h5{
+        color: #fff;
+        font-weight: bold;
+        line-height: 40px;
+        font-size: 1.2vw;
+        letter-spacing: -1px;
+        position: relative;
+        top: 15px;
+    }
+    
+    .Rate{
+        width: 100%;
+    }
+    
+    .NoRating{
+        width: 100%;
+        height: 30px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+        color: #cccccc;
+        font-size: 1.3vw;
+    }
+
+    .IconShoppingContainer{
+        width: 100%;
+        margin-top: 10px;
+        position: absolute;
+        top: 0;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        color:  rgb(197, 197, 197);
+        transition: 0.5s all;
+        z-index: 1;
+    }
+    
+    .IconShopping{
+        width: 22px;
+        height: 22px;
+        margin: 0 15px;
+        border-radius: 20px;
+        background-color: #00000010;
+        background: '-moz-linear-gradient(top, #9E0000 0%, #FF0000 100%)';
+        background: '-webkit-linear-gradient(top, #9E0000 0%, #FF0000 100%)';
+        background: 'linear-gradient(to top, #9E0000 0%, #FF0000 100%)';
+        /* border: thin dotted #f00; */
+    }
+}
+
+
+@media (max-width: 575px){
+
+    .ProductContainer:hover{
+        cursor: pointer;
+        transform: translateY(-10px);
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2)
+    }
+    
+    .ProductContainer{
+        width: 130px;
+        height: 200px;
+        border-radius: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        transition: 0.5s all;
+        margin: 10px 0;
+    }
+
+    .Zapatilla{
+        width: 100%;
+        height: 180px;
+        overflow: hidden;
+    }
+    
+    .Zapatilla img{
+        width: 110px;
+        position: relative;
+        top: 15px;
+    }
+
+    .Name h3{ 
+        width: 100%;
+        height: 35px;
+        font-size: 2.2vw;
+        font-family: 'Zen Kurenaido', sans-serif;
+        line-height: 15px;
+        color: #000;
+    }
+    
+    .PriceProduct{
+        width: 95%;
+        color: #000;
+        font-size: 2.2vw;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-evenly;
+        margin-left: 10px;
+    }
+
+    .PriceProduct h5{
+        font-size: 2.2vw;
+    }
+    
+    .OldPrice{
+        font-size: 2.2vw;
+        margin: 0 10px;
+        text-decoration:line-through;
+        color: #f00;
+    }
+
+    .Discount{
+        width: 100%;
+        height: 70px;
+        position: absolute;
+        left: 70px;
+        top: -15px;
+        background-image: url('../../assets/discount.png');
+        background-size: 30%;
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+    
+    .Discount h5{
+        color: #fff;
+        font-weight: bold;
+        line-height: 40px;
+        font-size: 1.2vw;
+        letter-spacing: -1px;
+        position: relative;
+        top: 15px;
+    }
+    
+    .Rate{
+        width: 100%;
+    }
+    
+    .NoRating{
+        width: 100%;
+        height: 30px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-evenly;
+        color: #cccccc;
+        font-size: 1.4vw;
+    }
+
+    .IconShoppingContainer{
+        width: 100%;
+        margin-top: 10px;
+        position: absolute;
+        top: 0;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        color:  rgb(197, 197, 197);
+        transition: 0.5s all;
+        z-index: 1;
+    }
+    
+    .IconShopping{
+        width: 22px;
+        height: 22px;
+        margin: 0 15px;
+        border-radius: 20px;
+        background-color: #00000010;
+        background: '-moz-linear-gradient(top, #9E0000 0%, #FF0000 100%)';
+        background: '-webkit-linear-gradient(top, #9E0000 0%, #FF0000 100%)';
+        background: 'linear-gradient(to top, #9E0000 0%, #FF0000 100%)';
     }
 }
 
