--- a/client/src/components/Profile/profile.css
+++ b/client/src/components/Profile/profile.css
@@ -130,6 +130,14 @@
 .delete-Wish{
     height: 20px;
     width: 5px;
+    position: relative;
+    right: 45px;
+    top: 10px;
+    z-index: 1111;
+}
+
+.delete-Wish:hover{
+    transform: translateY(-10px);
 }
 
 .Modal-Profile-Row{
