--- a/client/src/components/Catalogue/PaginadoMobile.css
+++ b/client/src/components/Catalogue/PaginadoMobile.css
@@ -24,7 +24,6 @@
     font-size: 1.5vh;
     margin: 0 2px;
     transition: 0.5s all;
-    /* border: thin dotted #00f; */
 }
 
 .PageMobile a{
@@ -38,7 +37,6 @@
 .PageMobile a:hover{
     cursor: pointer;
     color: #f00;
-    border-bottom: solid 2px #f00;
 }
 
 .NumberMobile{
@@ -51,3 +49,39 @@
 /* .NumberCurrent{
     color: #f00;
 } */
+
+
+
+@media (max-width: 575px){
+    
+    .PaginadoContainerMobile{
+        width: 95%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        margin-top: 30px;
+    }
+
+    .PageMobile{
+        width: 10px;
+        height: 20px;
+        text-align: center;
+        float: left;
+        margin: 0 5px;
+    }
+    
+    .NumberMobile{
+        font-size: 12px;
+        color: #000;
+        font-weight: bold;
+    }
+    
+    .PageCurrent{
+        font-size: 12px;
+        color: #f00;
+        font-weight: bold;
+        border-bottom: solid 2px #f00;
+    }
+
+}
