--- a/client/src/components/MoreRating/MoreRating.css
+++ b/client/src/components/MoreRating/MoreRating.css
@@ -1,3 +1,12 @@
+.LinkZapas{
+    color: #000;
+}
+
+.LinkZapas:hover{
+    color: #000;
+    cursor: pointer;
+}
+
 @media (min-width: 1400px) {
 
     .MoreRatingContainer{
